update worker counts and prod values

--- a/subway/templates/worker.yaml
+++ b/subway/templates/worker.yaml
@@ -5,9 +5,7 @@ metadata:
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
-{{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-{{- end }}
+  replicas: {{ .Values.workerReplicaCount }}
   selector:
     matchLabels:
       component: worker
