--- a/subway/values-production.yaml
+++ b/subway/values-production.yaml
@@ -2,7 +2,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
+workerReplicaCount: 0
 
 image:
   repository: registry.gitlab.com/upchieve/subway/main
@@ -14,7 +15,7 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
-publicSubdomain: app
+publicSubdomain: k8stest
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -70,7 +71,7 @@ workerResources:
     memory: 1Gi
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 2
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
