update resource requests

--- a/subway/values-production.yaml
+++ b/subway/values-production.yaml
@@ -52,10 +52,10 @@ resources:
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   limits:
-    cpu: 2
+    cpu: 1500m
     memory: 1500Mi
   requests:
-    cpu: 1
+    cpu: 500m
     memory: 1Gi
 
 workerResources:
@@ -64,10 +64,10 @@ workerResources:
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   limits:
-    cpu: 2
+    cpu: 1500m
     memory: 1500Mi
   requests:
-    cpu: 1
+    cpu: 500m
     memory: 1Gi
 
 autoscaling:
