--- a/high-line/values-production.yaml
+++ b/high-line/values-production.yaml
@@ -50,22 +50,10 @@ resources:
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   limits:
-    cpu: 2
+    cpu: 1500m
     memory: 1500Mi
   requests:
-    cpu: 1
-    memory: 1Gi
-
-workerResources:
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  limits:
-    cpu: 2
-    memory: 1500Mi
-  requests:
-    cpu: 1
+    cpu: 500m
     memory: 1Gi
 
 autoscaling:
