set subdomain to app

--- a/subway/values-production.yaml
+++ b/subway/values-production.yaml
@@ -15,7 +15,7 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
-publicSubdomain: k8stest
+publicSubdomain: app
 
 serviceAccount:
   # Specifies whether a service account should be created
