--- a/high-line/templates/deployment.yaml
+++ b/high-line/templates/deployment.yaml
@@ -8,6 +8,7 @@ spec:
 {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
 {{- end }}
+  revisionHistoryLimit: 5
   strategy:
     type: RollingUpdate
     rollingUpdate:
