--- a/subway/templates/mapping.yaml
+++ b/subway/templates/mapping.yaml
@@ -72,8 +72,8 @@ metadata:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
   host: {{ .Values.publicSubdomain }}.upchieve.org
-  prefix: /setcookie/
-  rewrite: /setcookie/
+  prefix: /setcookie
+  rewrite: /setcookie
   timeout_ms: 500000
   service: {{ include "subway.fullname" . }}.{{ .Release.Namespace }}:{{ .Values.httpPort }}
 ---
