--- a/subway/templates/mapping.yaml
+++ b/subway/templates/mapping.yaml
@@ -2,7 +2,7 @@
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  name:  subway-{{ .Release.Namespace }}-api-mapping
+  name:  subway-{{ .Release.Namespace }}-mapping
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
