Revert "removes high-line"
This reverts commit c66805e5ab53766b824cb39ffbb2d86913260f3b

--- a/subway/templates/mapping.yaml
+++ b/subway/templates/mapping.yaml
@@ -2,7 +2,7 @@
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  name:  subway-{{ .Release.Namespace }}-mapping
+  name:  subway-{{ .Release.Namespace }}-api-mapping
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
