--- a/subway/templates/service.yaml
+++ b/subway/templates/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "subway.fullname" . }}-name
+  name: {{ include "subway.fullname" . }}-stable
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
