--- a/subway/templates/deployment.yaml
+++ b/subway/templates/deployment.yaml
@@ -52,6 +52,8 @@ spec:
                 secretKeyRef:
                   name: subway-{{ .Release.Namespace }}-doppler-token
                   key: DOPPLER_TOKEN
+            - name: SUBWAY_VERSION
+              value: {{ .Values.image.tag }}
           ports:
             - name: http
               containerPort: {{ .Values.httpPort }}
