fix tag reference in VERSION env var

--- a/subway/templates/rollout.yaml
+++ b/subway/templates/rollout.yaml
@@ -60,7 +60,7 @@ spec:
                   name: subway-{{ .Release.Namespace }}-doppler-token
                   key: DOPPLER_TOKEN
             - name: SUBWAY_VERSION
-              value: {{ .Values.image.tag }}
+              value: {{ .Values.ambassador.rollouts.image.tag }}
           ports:
             - name: http
               containerPort: {{ .Values.httpPort }}
