--- a/subway/templates/mapping.yaml
+++ b/subway/templates/mapping.yaml
@@ -2,19 +2,22 @@
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  name:  subway-{{ .Release.Namespace }}-mapping
+  name:  subway-{{ .Release.Namespace }}-stable-mapping
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
   host: {{ .Values.publicSubdomain }}.upchieve.org
   prefix: /
   timeout_ms: 500000
-  service: {{ include "subway.fullname" . }}.{{ .Release.Namespace }}:{{ .Values.httpPort }}
+  resolver: endpoint
+  load_balancer:
+    policy: least_request
+  service: {{ include "subway.fullname" . }}-stable.{{ .Release.Namespace }}:{{ .Values.httpPort }}
 ---
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  name:  subway-{{ .Release.Namespace }}-whiteboard-reset-mapping
+  name:  subway-{{ .Release.Namespace }}-whiteboard-reset-stable-mapping
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
@@ -22,12 +25,16 @@ spec:
   prefix: /whiteboard/reset/
   rewrite: /whiteboard/reset/
   timeout_ms: 500000
-  service: {{ include "subway.fullname" . }}.{{ .Release.Namespace }}:{{ .Values.httpPort }}
+  resolver: endpoint
+  load_balancer:
+    policy: ring_hash
+    source_ip: true
+  service: {{ include "subway.fullname" . }}-stable.{{ .Release.Namespace }}:{{ .Values.httpPort }}
 ---
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  name:  subway-{{ .Release.Namespace }}-whiteboard-mapping
+  name:  subway-{{ .Release.Namespace }}-whiteboard-stable-mapping
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
@@ -35,7 +42,7 @@ spec:
   prefix: /whiteboard/
   rewrite: /whiteboard/
   timeout_ms: 500000
-  service: {{ include "subway.fullname" . }}.{{ .Release.Namespace }}:{{ .Values.httpPort }}
+  service: {{ include "subway.fullname" . }}-stable.{{ .Release.Namespace }}:{{ .Values.httpPort }}
   allow_upgrade:
     - websocket
   resolver: endpoint
@@ -46,14 +53,14 @@ spec:
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  name:  subway-{{ .Release.Namespace }}-socket-mapping
+  name:  subway-{{ .Release.Namespace }}-socket-stable-mapping
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
   host: {{ .Values.publicSubdomain }}.upchieve.org
   prefix: /
   timeout_ms: 500000
-  service: {{ include "subway.fullname" . }}.{{ .Release.Namespace }}:{{ .Values.socketPort }}
+  service: {{ include "subway.fullname" . }}-stable.{{ .Release.Namespace }}:{{ .Values.socketPort }}
   query_parameters:
     transport: true
   allow_upgrade:
