--- a/subway/templates/deployment.yaml
+++ b/subway/templates/deployment.yaml
@@ -70,6 +70,8 @@ spec:
               port: http
             failureThreshold: 10
             periodSeconds: 6
+            timeoutSeconds: 1
+            successThreshold: 1
           # If the app fails a readiness check 3 times in a row
           # k8s will stop sending traffic, but won't restart the
           # pod, to give it a chance to recover.
@@ -78,8 +80,9 @@ spec:
               path: /healthz
               port: http
             initialDelaySeconds: 30
-            periodSeconds: 5
-            failureThreshold: 3
+            periodSeconds: 10
+            failureThreshold: 2
+            timeoutSeconds: 3
           # If it fails this 3 more times than readiness, the pod
           # will get restarted. we're essentially giving it 15
           # seconds to recover before getting restarted.
@@ -88,8 +91,10 @@ spec:
               path: /healthz
               port: http
             initialDelaySeconds: 60
-            periodSeconds: 5
-            failureThreshold: 20
+            periodSeconds: 10
+            failureThreshold: 10
+            timeoutSeconds: 3
+            successThreshold: 1
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
