--- a/subway/values-production.yaml
+++ b/subway/values-production.yaml
@@ -5,11 +5,7 @@
 replicaCount: 3
 workerReplicaCount: 1
 
-image:
-  repository: registry.gitlab.com/upchieve/subway/main
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: 9a6ecf79a63d7c18940dcee77ffb333a3f5bdb23
+imagePullPolicy: IfNotPresent
 
 imagePullSecrets: []
 nameOverride: ""
@@ -91,7 +87,7 @@ ambassador:
     replicas: 2
     image:
       repository: registry.gitlab.com/upchieve/subway/main
-      tag: d3788a84ec7aca197c3eb110cc345b242e41c795
+      tag: 9a6ecf79a63d7c18940dcee77ffb333a3f5bdb23
     annotations:
       getambassador.io/webhookUrl: "https://app.getambassador.io/webhooks/rollout"
       getambassador.io/rolloutId: "12fhfb323jn32kjh3nbk"
