disables pod disruption budget for staging and demo

--- a/subway/values-production.yaml
+++ b/subway/values-production.yaml
@@ -11,6 +11,9 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+podDisruptionBudget:
+  enabled: true
+
 publicSubdomain: app
 
 serviceAccount:
