--- a/subway/templates/poddisruptionbudget.yaml
+++ b/subway/templates/poddisruptionbudget.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.podDisruptionBudget.enabled }}
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
@@ -7,3 +8,4 @@ spec:
   selector:
     matchLabels:
       {{- include "subway.selectorLabels" . | nindent 6 }}
+{{- end }}
