--- a/subway/values-demo.yaml
+++ b/subway/values-demo.yaml
@@ -11,6 +11,9 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+podDisruptionBudget:
+  enabled: false
+
 publicSubdomain: demo
 
 serviceAccount:
