--- a/subway/values-staging.yaml
+++ b/subway/values-staging.yaml
@@ -11,6 +11,9 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+podDisruptionBudget:
+  enabled: false
+
 publicSubdomain: staging
 
 serviceAccount:
