--- a/subway/templates/poddisruptionbudget.yaml
+++ b/subway/templates/poddisruptionbudget.yaml
@@ -7,5 +7,6 @@ spec:
   minAvailable: 1
   selector:
     matchLabels:
+      component: web
       {{- include "subway.selectorLabels" . | nindent 6 }}
 {{- end }}
