--- a/subway/templates/mapping.yaml
+++ b/subway/templates/mapping.yaml
@@ -2,22 +2,22 @@
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  name:  subway-{{ .Release.Namespace }}-stable-mapping
+  name:  subway-{{ .Release.Namespace }}-rest-mapping
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
-  host: {{ .Values.publicSubdomain }}.upchieve.org
+  host: {{ .Values.publicSubdomain }}-rest.upchieve.org
   prefix: /
   timeout_ms: 500000
   resolver: endpoint
   load_balancer:
     policy: least_request
-  service: {{ include "subway.fullname" . }}-stable.{{ .Release.Namespace }}:{{ .Values.httpPort }}
+  service: "{{ include "subway.fullname" . }}-rest.{{ .Release.Namespace }}:{{ .Values.httpPort }}"
 ---
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  name:  subway-{{ .Release.Namespace }}-whiteboard-reset-stable-mapping
+  name:  subway-{{ .Release.Namespace }}-whiteboard-reset-mapping
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
@@ -29,12 +29,12 @@ spec:
   load_balancer:
     policy: ring_hash
     source_ip: true
-  service: {{ include "subway.fullname" . }}-stable.{{ .Release.Namespace }}:{{ .Values.httpPort }}
+  service: "{{ include "subway.fullname" . }}-socket.{{ .Release.Namespace }}:{{ .Values.httpPort }}"
 ---
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  name:  subway-{{ .Release.Namespace }}-whiteboard-stable-mapping
+  name:  subway-{{ .Release.Namespace }}-whiteboard-mapping
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
@@ -42,7 +42,7 @@ spec:
   prefix: /whiteboard/
   rewrite: /whiteboard/
   timeout_ms: 500000
-  service: {{ include "subway.fullname" . }}-stable.{{ .Release.Namespace }}:{{ .Values.httpPort }}
+  service: "{{ include "subway.fullname" . }}-socket.{{ .Release.Namespace }}:{{ .Values.httpPort }}"
   allow_upgrade:
     - websocket
   resolver: endpoint
@@ -53,14 +53,14 @@ spec:
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  name:  subway-{{ .Release.Namespace }}-socket-stable-mapping
+  name:  subway-{{ .Release.Namespace }}-socket-mapping
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
   host: {{ .Values.publicSubdomain }}.upchieve.org
   prefix: /
   timeout_ms: 500000
-  service: {{ include "subway.fullname" . }}-stable.{{ .Release.Namespace }}:{{ .Values.socketPort }}
+  service: "{{ include "subway.fullname" . }}-socket-stable.{{ .Release.Namespace }}:{{ .Values.socketPort }}"
   query_parameters:
     transport: true
   allow_upgrade:
