--- a/subway/values.yaml
+++ b/subway/values.yaml
@@ -4,11 +4,9 @@
 
 replicaCount: 1
 
-image:
-  repository: registry.gitlab.com/upchieve/subway
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+imagePullPolicy: IfNotPresent
+
+workerReplicaCount: 0
 
 imagePullSecrets: []
 nameOverride: ""
@@ -43,6 +41,18 @@ socketPort: 3001
 service:
   type: ClusterIP
 
+workerResources:
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+  limits:
+    cpu: 250m
+    memory: 300Mi
+  requests:
+    cpu: 100m
+    memory: 150Mi
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
@@ -67,3 +77,25 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+podDisruptionBudget:
+  enabled: false
+
+# ---------------------------------------------------------------------------------------------
+# Ambassador Labs: Do not modify the lines below this section as they are dynamically generated
+ambassador:
+  rollouts:
+    annotations:
+      getambassador.io/rolloutId: 139d0918-badb-4f79-855e-48d52a385ce5
+      getambassador.io/webhookUrl: https://app.getambassador.io/cloud/webhooks/rollout
+    image:
+      repository: registry.gitlab.com/upchieve/subway/main
+      tag: 5da9d7f6c172e938e73863b43acc4c2276fd90ed
+    replicas: 2
+    steps:
+      - setWeight: 50
+      - pause:
+          duration: 45
+      - setWeight: 100
+      - pause:
+          duration: 45
