--- a/subway/templates/mapping.yaml
+++ b/subway/templates/mapping.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "subway.labels" . | nindent 4 }}
 spec:
-  host: {{ .Values.publicSubdomain }}-rest.upchieve.org
+  host: {{ .Values.publicSubdomain }}.upchieve.org
   prefix: /
   timeout_ms: 500000
   resolver: endpoint
