adds another default values.yaml entry

--- a/subway/values.yaml
+++ b/subway/values.yaml
@@ -41,6 +41,8 @@ socketPort: 3001
 service:
   type: ClusterIP
 
+publicSubdomain: fake
+
 workerResources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
