--- a/subway/templates/mapping.yaml
+++ b/subway/templates/mapping.yaml
@@ -60,7 +60,7 @@ spec:
   host: {{ .Values.publicSubdomain }}.upchieve.org
   prefix: /
   timeout_ms: 500000
-  service: "{{ include "subway.fullname" . }}-socket-stable.{{ .Release.Namespace }}:{{ .Values.socketPort }}"
+  service: "{{ include "subway.fullname" . }}-socket.{{ .Release.Namespace }}:{{ .Values.socketPort }}"
   query_parameters:
     transport: true
   allow_upgrade:
