--- a/subway/values-production.yaml
+++ b/subway/values-production.yaml
@@ -51,10 +51,10 @@ resources:
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   limits:
-    cpu: 500m
+    cpu: 1500m
     memory: 600Mi
   requests:
-    cpu: 150m
+    cpu: 1000m
     memory: 300Mi
 
 workerResources:
@@ -66,7 +66,7 @@ workerResources:
     cpu: 300m
     memory: 400Mi
   requests:
-    cpu: 100m
+    cpu: 1000m
     memory: 200Mi
 
 autoscaling:
@@ -76,7 +76,8 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   targetMemoryUtilizationPercentage: 80
 
-nodeSelector: {}
+nodeSelector:
+  "upchieve.org/usage": "compute"
 
 tolerations: []
 
