--- a/subway/values-staging.yaml
+++ b/subway/values-staging.yaml
@@ -77,7 +77,8 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   targetMemoryUtilizationPercentage: 80
 
-nodeSelector: {}
+nodeSelector:
+  "upchieve.org/usage": "compute"
 
 tolerations: []
 
