--- a/subway/values-production.yaml
+++ b/subway/values-production.yaml
@@ -84,17 +84,19 @@ tolerations: []
 affinity:
   podAntiAffinity:
     preferredDuringSchedulingIgnoredDuringExecution:
-      - labelSelector:
-          matchExpressions:
-            - key: component
-              operator: In
-              values:
-                - web
-            - key: app.kubernetes.io/instance
-              operator: In
-              values:
-                - subway-production
-        topologyKey: "kubernetes.io/hostname"
+      - weight: 100
+        podAffinityTerm
+          labelSelector:
+            matchExpressions:
+              - key: component
+                operator: In
+                values:
+                  - web
+                - key: app.kubernetes.io/instance
+                  operator: In
+                  values:
+                    - subway-production
+          topologyKey: "kubernetes.io/hostname"
 
 # ---------------------------------------------------------------------------------------------
 # Ambassador Labs: Do not modify the lines below this section as they are dynamically generated
