--- a/subway/values-production.yaml
+++ b/subway/values-production.yaml
@@ -85,7 +85,7 @@ affinity:
   podAntiAffinity:
     preferredDuringSchedulingIgnoredDuringExecution:
       - weight: 100
-        podAffinityTerm
+        podAffinityTerm:
           labelSelector:
             matchExpressions:
               - key: component
