--- a/subway/values-production.yaml
+++ b/subway/values-production.yaml
@@ -82,21 +82,21 @@ nodeSelector:
 tolerations: []
 
 affinity:
-  podAntiAffinity:
-    preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 100
-        podAffinityTerm:
-          labelSelector:
-            matchExpressions:
-              - key: component
-                operator: In
-                values:
-                  - web
-                - key: app.kubernetes.io/instance
-                  operator: In
-                  values:
-                    - subway-production
-          topologyKey: "kubernetes.io/hostname"
+#  podAntiAffinity:
+#    preferredDuringSchedulingIgnoredDuringExecution:
+#      - weight: 100
+#        podAffinityTerm:
+#          labelSelector:
+#            matchExpressions:
+#              - key: component
+#                operator: In
+#                values:
+#                  - web
+#                - key: app.kubernetes.io/instance
+#                  operator: In
+#                  values:
+#                    - subway-production
+#          topologyKey: "kubernetes.io/hostname"
 
 # ---------------------------------------------------------------------------------------------
 # Ambassador Labs: Do not modify the lines below this section as they are dynamically generated
